--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@ body {
   align-items: center;
   height: 100vh;
 }
+html {
+  font-size: 16px;
+}
 
 .App {
   /* border: 1px solid purple; */
@@ -12,6 +15,10 @@ body {
   height: 30rem;
   display: flex;
   gap: 1rem;
+}
 
-  justify-content: space-between;
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 7.7px;
+  }
 }
